# TradeFlowProduct

./: .gitignore  ADK_INTEGRATION_GUIDE.md  CLAUDE.md  README.md
docs/: AGENT_USAGE_GUIDE.md  DEVELOPMENT_SETUP_GUIDE.md
docs/UIUX/: README.md  chat_input_optimization_report.md  input_spacing_optimization_report.md  interface_fixes_report.md  tradeflow_mvp_three_column.html  tradeflow_mvp_three_column_optimized.html  tradeflow_mvp_ui.html  tradeflow_three_column_ui.html
docs/api/: agent_api_specification.md  api_design_guidelines.md  api_security_design.md  contract_testing_guide.md  mock_service_config.md  openapi_specification.yaml
docs/design/: tradeflow_technical_design.md
docs/design-architect/: design.md
docs/development/: ADK_INTEGRATION_GUIDE.md  agent_integration_plan.md  frontend_development_guide.md
docs/requirements/: tradeflow_mvp_requirements.md  tradeflow_requirements.md
docs/tasks/: frontend_backend_separation_tasks.md  tradeflow_mvp_task_breakdown.md
docs/test/: sample.md
src/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  midware_config.md  pyproject.toml  requirements.txt
src/backend/alembic/: env.py
src/backend/app/: __init__.py  config.py  dependencies.py  main.py
src/backend/app/api/: __init__.py  monitoring.py
src/backend/app/api/v1/: __init__.py  agent.py  auth.py  chat.py  health.py
src/backend/app/core/: __init__.py  database.py  exceptions.py  logging.py
src/backend/app/dependencies/: __init__.py  auth.py
src/backend/app/middleware/: __init__.py  cors.py  error_handler.py  logging.py  metrics.py  performance.py
src/backend/app/models/: __init__.py  base.py  conversation.py  file.py  product.py  subscription.py  user.py
src/backend/app/schemas/: __init__.py  auth.py  common.py
src/backend/app/services/: __init__.py  agent_error_handler.py  agent_performance_optimizer.py  agent_service.py  business.py  cache.py  conversation.py  file.py  oauth.py  payment.py  rate_limiter.py  security.py  session_manager.py  sse.py  sse_converter.py
src/backend/app/utils/: __init__.py  jwt_utils.py  minio_client.py  redis_client.py
src/backend/tests/: conftest.py  test_agent_integration.py  test_health.py
src/frontend/: .env.example  .prettierignore  package-lock.json  package.json  tradeflow_mvp_ui.html
(+128 files in other folders)
